<resources>
    <string name="app_name">SignUpForm</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="username_label">Username:</string>
    <string name="username_input_hint">Please enter your username</string>
    <string name="submit">submit</string>
    <string name="password_label">Password:</string>
    <string name="confirmpw_label">Confirm:</string>
    <string name="password_input_hint">Enter Password</string>
    <string name="confirmpw_input_hint">Enter Again</string>
    <string name="Random">random</string>

</resources>
