<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:orientation="horizontal"

    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/username"
            android:text="@string/username_label"
            android:textSize="14sp"
            android:layout_weight="25"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/username_EditText"
            android:layout_toRightOf="@+id/username"
            android:hint="@string/username_input_hint"
            android:layout_weight="75"
            android:layout_width="0dp"
            android:layout_height="40sp" />

        </LinearLayout>

    <LinearLayout
        android:id="@+id/password_field"
        android:layout_below="@+id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/password"
            android:text="@string/password_label"
            android:textSize="14sp"
            android:layout_weight="25"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/password_EditText"
            android:layout_toRightOf="@+id/username"
            android:hint="@string/password_input_hint"
            android:layout_weight="75"
            android:layout_width="0dp"
            android:layout_height="40sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/confirmpw_field"
        android:layout_below="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/confirmpw"
            android:text="@string/confirmpw_label"
            android:textSize="14sp"
            android:layout_weight="25"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/confirmpw_EditText"
            android:layout_toRightOf="@+id/username"
            android:hint="@string/confirmpw_input_hint"
            android:layout_weight="75"
            android:layout_width="0dp"
            android:layout_height="40sp" />

    </LinearLayout>


    <Button
        android:id="@+id/submit_button"
        android:layout_alignRight="@+id/confirmpw_field"
        android:layout_below="@+id/confirmpw_field"
        android:text="@string/submit"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
